Fix overflow. Fix data-inputs

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
     justify-content: flex-start;
     flex-direction:column;
     height:100vh;
-    overflow: hidden
+    overflow-x: hidden
 }
 
 .content-centered {
